--- a/package.json
+++ b/package.json
@@ -14,7 +14,6 @@
   "dependencies": {
     "@tailwindcss/cli": "^4.0.9",
     "ejs": "^3.1.10",
-    "express": "^4.21.2",
-    "tailwindcss": "^4.0.9"
+    "express": "^4.21.2"
   }
 }
